[package]
name = "memory-map"
version = "0.1.0"
edition = "2021"
[lib]
crate_type = ["cdylib"]

[dependencies]
libc_alloc = "1.0.5"
nonoverlapping_interval_tree = { version = "0.1.5", default_features = false }

[profile.dev]
panic = "abort"
strip = "symbols"

[profile.release]
panic = "abort"
strip = "symbols"
