[package]
name = "type-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[lib]
crate-type = ["cdylib"]

[dependencies]

# We always need `panic = "abort"`,
# as we don't want panics to cross the C/Rust boundary,
# and we want such panics for these security checks to always be fatal.

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
