[package]
name = "type-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = { version = "0.2.174", default-features = false }
libc_alloc = "1.0.7"
spin = "0.10.0"

# We always need `panic = "abort"`,
# as we don't want panics to cross the C/Rust boundary,
# and we want such panics for these security checks to always be fatal.

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# It's important to be small to link into call gates,
# and LTO reduces size by an order of magnitude.
lto = true
